added validation for the task input area

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
         <img class="profile-img" src="./IMG_1997.jpg" alt="Profile Picture">
         <div class="login-box">
             <div class="login-name">
-                <div id="datetime" style="text-align: center; font-size: 18px; color: white;"></div>
                 <h1>Sphiwe's To-Do List</h1>
+                <div id="currentDateTime" class="current-date-time"></div> <!-- Date & Time Section -->
                 <div class="underline-name"></div>
             </div>
             <form onsubmit="addTask(event)">
